[package]
name = "penumbra-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace deps
decaf377-ka = { path = "../decaf377-ka/" }
decaf377-fmd = { path = "../decaf377-fmd/" }
penumbra-proto = { path = "../proto/" }
penumbra-tct = { path = "../tct/", features = ["r1cs"] }

# Git deps
decaf377 = { git = "https://github.com/penumbra-zone/decaf377", features = ["r1cs"] }
decaf377-rdsa = { version = "0.5", git = "https://github.com/penumbra-zone/decaf377-rdsa" }
poseidon377 = { git = "https://github.com/penumbra-zone/poseidon377", rev = "a2d8c7a3288e2e877ac88a4d8fd3cc4ff2b52c04", features = ["r1cs"] }
poseidon-paramgen = { git = "https://github.com/penumbra-zone/poseidon377", rev = "a2d8c7a3288e2e877ac88a4d8fd3cc4ff2b52c04" }
f4jumble = { git = "https://github.com/zcash/librustzcash", rev = "2425a0869098e3b0588ccd73c42716bcf418612c" }

# Crates.io deps
ark-ff = "0.3"
ark-std = "0.3"
ark-serialize = "0.3"
regex = "1.5"
sha2 = "0.10.1"
bech32 = "0.8.1"
aes = "0.8.1"
anyhow = "1"
thiserror = "1"
bytes = "1"
derivative = "2.2"
hex = "0.4"
hmac = "0.12.0"
# Not enabling js feature for getrandom, which is a transitive dep of rand_core,
# because the docs recommend against doing it in libraries: https://docs.rs/getrandom/latest/getrandom/#webassembly-support
# Downstream client projects can modify their Cargo.toml files to enable it.
# getrandom = { version = "0.2", features = ["js"] }
blake2b_simd = "0.5"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
once_cell = "1.8"
pbkdf2 = "0.10.0"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand = "0.8"
chacha20poly1305 = "0.9.0"
ethnum = "1.3"
# temporary -- only used for division
ibig = "0.3"
# only needed because ark-ff doesn't display correctly
num-bigint = "0.4"
tracing = "0.1"
ark-groth16 = "0.3"
ark-snark = "0.3"
ark-r1cs-std = "0.3"
ark-relations = "0.3"
ark-nonnative-field = "0.3"

[dev-dependencies]
proptest = "1"
bincode = "1"
serde_json = "1"
frost377 = { git = "https://github.com/penumbra-zone/frost377" }
