[package]
name = "penumbra-custody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto" }
penumbra-chain = { path = "../chain" }
penumbra-crypto = { path = "../crypto" }
penumbra-transaction = { path = "../transaction" }

tokio = { version = "1.21.1", features = ["full"]}
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
tracing = "0.1"
tonic = "0.6.1"
bincode = "1.3.3"
bytes = { version = "1", features = ["serde"] }
prost = "0.9"
futures = "0.3"
hex = "0.4"
rand_core = "0.6"

[build-dependencies]
vergen = "5"
