[package]
name = "penumbra-custody"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto" , features = ["rpc"] }
penumbra-crypto = { path = "../crypto" }
penumbra-transaction = { path = "../transaction" }

tokio = { version = "1.21.1", features = ["rt", "sync"]}
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "2.2", features = ["hex"] }
tracing = "0.1"
tonic = "0.8.1"
bytes = { version = "1", features = ["serde"] }
prost = "0.11"
futures = "0.3"
hex = "0.4"
rand_core = "0.6"
ed25519-consensus = "2.1"
base64 = "0.20"

[build-dependencies]
vergen = "5"

[dev-dependencies]
toml = "0.5"

[features]
default = []
parallel = ["penumbra-crypto/parallel", "penumbra-transaction/parallel"]