[package]
name = "decaf377-ka"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { git = "https://github.com/penumbra-zone/algebra", branch = "ours" }
decaf377 = { git = "https://github.com/penumbra-zone/decaf377", branch = "jf-proof", features = ["proofs"] }
rand_core = { version = "0.6.3", features = ["getrandom"] }
thiserror = "1"
hex = "0.4"
zeroize = "1.4"
zeroize_derive = "=1.2.2"


[dev-dependencies]
proptest = "1"
