[package]
name = "decaf377-ka"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.3", default_features = false }
decaf377 = "0.3"
rand_core = { version = "0.6.3", features = ["getrandom"] }
thiserror = "1"
hex = "0.4"
zeroize = "1.4"
zeroize_derive = "1.3"

[dev-dependencies]
proptest = "1"

[features]
default = ["std"]
std = ["ark-ff/std"]