[package]
name = "penumbra-eddy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
anyhow = "1"
async-trait = "0.1"
futures = "0.3"
merlin = "3"
rand_core = "0.6"
rand = "0.8.5"
proptest = "1"
ark-ff = "0.3"
ark-std = "0.3"
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"]}
