[package]
name = "penumbra-eddy"
version = "0.52.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
parking_lot = "0.12"
decaf377 = "0.4"
anyhow = "1"
futures = "0.3"
merlin = "3"
rand_core = "0.6"
rand = "0.8.5"
proptest = "1"
ark-ff = { version = "0.4", default_features = false }
ark-std = {version = "0.4", default-features = false}
thiserror = "1"

[dev-dependencies]
tokio = { version = "1.21.1", features = ["full"]}

[features]
default = ["std"]
std = ["ark-ff/std", "ark-std/std"]
