[package]
name = "penumbra-ibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-crypto = { path = "../crypto" }
penumbra-proto = { path = "../proto" } 
tendermint = "0.24.0-pre.1"

# External dependencies
prost-types = "0.9"
tendermint-proto = "0.24.0-pre.1"
once_cell = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
async-trait = "0.1.52"
ibc = { git = "https://github.com/penumbra-zone/ibc-rs.git", branch = "with-tendermintrs-24" }
ibc-proto = { git = "https://github.com/penumbra-zone/ibc-rs.git", branch = "with-tendermintrs-24" }
