[package]
name = "penumbra-ibc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penumbra-crypto = { path = "../crypto" }
ibc-rs = { git = "https://github.com/penumbra-zone/ibc-rs.git", branch = "with-tendermintrs-24", package = "ibc" }
ibc-proto = { git = "https://github.com/penumbra-zone/ibc-rs.git", branch = "with-tendermintrs-24" }
hex = "0.4"
sha2 = "0.10.1"

[lib]
name = "ibc"
path = "lib.rs"
