[package]
name = "penumbra-measure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penumbra-proto = { path = "../proto" }

tokio = { version = "1", features = ["full"] }
tonic = "0.7"
anyhow = "1"
clap = { version = "3", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.2"

[[bin]]
name = "measure"
path = "src/main.rs"
