[package]
name = "penumbra-measure"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penumbra-proto = { path = "../proto" }
penumbra-chain = { path = "../chain" }

tokio = { version = "1.21.1", features = ["full"] }
tonic = "0.8.1"
anyhow = "1"
clap = { version = "3", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.2"
indicatif = "0.16"
reqwest = "0.11"
serde_json = "1"

[build-dependencies]
vergen = "5"

[[bin]]
name = "measure"
path = "src/main.rs"
