[package]
name = "penumbra-narsil"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-storage = { path = "../storage" }

# Penumbra dependencies
tower-abci = "0.5.0"
tower-actor = "0.1.0"
