[package]
name = "narsil"
authors = ["Penumbra Labs <team@penumbra.zone>"]
description = "The software for the Narsil sharded custody implementation"
version = "0.51.2"
edition = "2021"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
# TODO: remove dependency on penumbra-chain
penumbra-chain = { path = "../chain" }
penumbra-proto = { path = "../proto" , features = ["rpc"] }
penumbra-storage = { path = "../storage" }
penumbra-tower-trace = { path = "../tower-trace" }
penumbra-tendermint-proxy = { path = "../tendermint-proxy" }

# Penumbra dependencies
tower-abci = "0.5.0"
tower-actor = "0.1.0"

# External dependencies
anyhow = "1"
async-stream = "0.2"
clap = { version = "3", features = ["derive", "env"] }
console-subscriber = "0.1.8"
futures = "0.3"
hex = "0.4"
http = "0.2"
metrics = "0.19.0"
metrics-exporter-prometheus = { version = "0.10.0", features = [
    "http-listener",
] }
metrics-tracing-context = "0.11.0"
metrics-util = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tendermint-config = "0.29.0"
tendermint-proto = "0.29.0"
tendermint = "0.29.0"
tendermint-light-client-verifier = "0.29.0"
tokio = { version = "1.22", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tonic = "0.8.1"
tonic-web = "0.4.0"
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
url = "2"
atty = "0.2"

[build-dependencies]
vergen = "5"
anyhow = "1"
