[package]
name = "pcli-next"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2021"
description = "The command-line interface for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.16", features = ["full"]}
anyhow = "1"

[build-dependencies]
vergen = "5"
