[package]
name = "pcli"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2021"
description = "The command-line interface for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
nct-divergence-check = ["penumbra-view/nct-divergence-check"]

[dependencies]
# Workspace dependencies
jmt = { git = "https://github.com/penumbra-zone/jellyfish-merkle.git", branch = "main" }
penumbra-proto = { path = "../proto" }
penumbra-chain = { path = "../chain" }
penumbra-crypto = { path = "../crypto" }
penumbra-transaction = { path = "../transaction" }
penumbra-wallet= { path = "../wallet" }
penumbra-view = { path = "../view" }
penumbra-custody = { path = "../custody" }
penumbra-tct = { path = "../tct" }
# TODO: replace by a penumbra-app
penumbra-component = { path = "../component" }
pd = { path = "../pd" }

# Penumbra dependencies
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
tendermint = "0.24.0-pre.1"
tendermint-rpc = { version = "0.24.0-pre.1", features = ["http-client"] }

# External dependencies
ark-ff = "0.3"
ed25519-consensus = "1.2" # 1.2 required because tendermint 0.24.0-pre.1 uses it
futures = "0.3"
async-stream = "0.2"
bincode = "1.3.3"
blake2b_simd = "0.5"
bytes = "1"
comfy-table = "5"
directories = "4.0.1"
fslock = "0.2"
tokio = { version = "1", features = ["full"]}
tokio-stream = "0.1"
tokio-util = "0.6"
tower = { version = "0.4", features = ["full"]}
tracing = "0.1"
tonic = "0.6.1"
tracing-subscriber = "0.3"
pin-project = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.9"
anyhow = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
indicatif = "0.16"
http-body = "0.4.5"
clap = { version = "3", features = ["derive", "env"] }
camino = "1"
url = "2"
colored_json = "2.1"

[build-dependencies]
vergen = "5"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3.0"
regex = "1.6.0"