[package]
name = "pcli"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2021"
description = "The command-line interface for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
sct-divergence-check = ["penumbra-view/sct-divergence-check"]

[dependencies]
# Workspace dependencies
jmt = "0.3"
penumbra-proto = { path = "../proto" }
penumbra-chain = { path = "../chain" }
penumbra-crypto = { path = "../crypto", features = ["fast-proofs"] }
penumbra-transaction = { path = "../transaction", features = ["clap"] }
penumbra-wallet = { path = "../wallet" }
penumbra-view = { path = "../view" }
penumbra-custody = { path = "../custody" }
penumbra-tct = { path = "../tct" }
# TODO: replace by a penumbra-app
penumbra-component = { path = "../component" }

# Penumbra dependencies
decaf377 = "0.2"
tendermint = { version = "0.29.0", features = ["rust-crypto"] }

# External dependencies
ark-ff = "0.3"
ed25519-consensus = "2"
futures = "0.3"
async-stream = "0.2"
bincode = "1.3.3"
blake2b_simd = "0.5"
base64 = "0.21"
bytes = "1"
comfy-table = "5"
directories = "4.0.1"
tokio = { version = "1.22", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.4", features = ["full"] }
tracing = "0.1"
tonic = "0.8.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
pin-project = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
sha2 = "0.9"
anyhow = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
indicatif = "0.16"
http-body = "0.4.5"
clap = { version = "3", features = ["derive", "env"] }
camino = "1"
url = "2"
colored_json = "2.1"
toml = { version = "0.7", features = ["preserve_order"] }
walkdir = "2"
once_cell = "1"

[build-dependencies]
vergen = "5"
anyhow = "1"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
tempfile = "3.3.0"
regex = "1.6.0"
penumbra-proof-params = { path = "../proof-params", features=["proving-keys", "fast-proofs"] }