[package]
name = "pd"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2021"
description = "The node software for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto" }
penumbra-ibc = { path = "../ibc" }
penumbra-chain = { path = "../chain" }
penumbra-crypto = { path = "../crypto" }
penumbra-stake = { path = "../stake" }
penumbra-transaction = { path = "../transaction" }
penumbra-storage = { path = "../storage" }
penumbra-component = { path = "../component" }

# Penumbra dependencies
ark-ff = { git = "https://github.com/penumbra-zone/algebra", branch = "ours" }
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
tower-abci = { git = "https://github.com/penumbra-zone/tower-abci/" }
tendermint-config = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "master" }
tendermint-proto = "0.23.5" 
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "master" }
jmt = { git = "https://github.com/penumbra-zone/jellyfish-merkle.git", branch = "main" }


# External dependencies
evmap = "10"
async-stream = "0.2"
bincode = "1.3.3"
blake2b_simd = "0.5"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
csv = "1.1"
directories = "4.0"
tokio = { version = "1.16", features = ["full"]}
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.4", features = ["full"]}
tracing = "0.1"
regex = "1.5"
prost-types = "0.9"
structopt = "0.3"
tonic = "0.6.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
pin-project = "1"
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
sha2 = "0.9"
anyhow = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
metrics = "0.18.0"
metrics-exporter-prometheus = { version = "0.8.0", features = ["http-listener"] }
http = "0.2"
ed25519-consensus = "2"
async-trait = "0.1.52"
once_cell = "1.7.2"
rocksdb = "0.18.0"
#ibc = { path = "../../ibc-rs/modules" }
ibc = "0.13.0"
ibc-proto = "0.17.0"
tendermint-light-client-verifier = "0.23.5"
tempfile = "3.3.0"
base64 = "0.13.0"
console-subscriber = "0.1.4"

[build-dependencies]
vergen = "5"
anyhow = "1"
