[package]
name = "pd"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2021"
description = "The node software for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false
# Pin a MSRV. Anything more recent than this value is OK.
# If a lower version is used for build, the build will fail.
rust-version = "1.65"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto" }
penumbra-chain = { path = "../chain" }
penumbra-crypto = { path = "../crypto", features = ["parallel"] }
penumbra-transaction = { path = "../transaction" }
penumbra-storage = { path = "../storage" }
penumbra-component = { path = "../component" }
penumbra-wallet = { path = "../wallet" }

# Penumbra dependencies
decaf377 = {version = "0.3", features = ["parallel"]}
tower-abci = "0.5.0"
jmt = "0.3"
tower-actor = "0.1.0"

# External dependencies
tendermint-config = "0.29.0"
tendermint-proto = "0.29.0"
tendermint = "0.29.0"
tendermint-light-client-verifier = "0.29.0"
ibc = "0.29"
ibc-proto = "0.26"
prost = "0.11"
toml = "0.5"
# We don't need this crate at all, but its upstream published a breaking change as
# 0.7.1 (also prost-related), and depending on an exact version here will exclude
# the bad update until it's yanked.
ics23 = "0.9.0"

pin-project-lite = "0.2.9"
ark-ff = { version = "0.3" }
async-stream = "0.2"
bincode = "1.3.3"
blake2b_simd = "0.5"
bytes = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
csv = "1.1"
directories = "4.0"
tokio = { version = "1.22", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
tower = { version = "0.4", features = ["full"] }
tower-service = "0.3.2"
tracing = "0.1"
regex = "1.5"
reqwest = { version = "0.11", features = ["json"] }
prost-types = "0.11"
pbjson-types = "0.5"
tonic = "0.8.1"
tonic-web = "0.4.0"
tracing-subscriber = { version = "0.3", features = ["env-filter", "ansi"] }
url = "2"
pin-project = "1"
futures = "0.3"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
sha2 = "0.9"
anyhow = "1"
hex = "0.4"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.3", features = ["getrandom"] }
metrics = "0.19.0"
metrics-exporter-prometheus = { version = "0.10.0", features = [
    "http-listener",
] }
http = "0.2"
ed25519-consensus = "2"

async-trait = "0.1.52"
tendermint-rpc = { version = "0.29.0", features = ["http-client"] }
once_cell = "1.7.2"
rocksdb = "0.19.0"
tempfile = "3.3.0"
base64 = "0.20"
console-subscriber = "0.1.8"
metrics-tracing-context = "0.11.0"
metrics-util = "0.13"
clap = { version = "3", features = ["derive"] }

[build-dependencies]
vergen = "5"
anyhow = "1"
