[package]
name = "penumbra-c-bindings"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penumbra-view = { path = "../view" }

[lib]
name = "penumbra_c_bindings"
crate-type = [ "staticlib" ]

[build-dependencies]
cbindgen = "0.24.3"