[package]
edition = "2021"
name = "penumbra-c-bindings"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
penumbra-view = {path = "../view"}

[lib]
crate-type = ["staticlib"]
name = "penumbra_c_bindings"

[build-dependencies]
cbindgen = "0.24.3"
