[package]
name = "penumbra"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2018"
description = "The node software for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
tower-abci = { path = "../tower-abci" }
# External dependencies
bytes = "1"
tokio = { version = "1", features = ["full"]}
tower = { version = "0.4", features = ["full"]}
tracing = "0.1"
structopt = "0.3"
tracing-subscriber = "0.2"
tendermint-proto = { git = "https://github.com/hdevalence/tendermint-rs.git", branch = "abci-domain-types" }
tendermint = { git = "https://github.com/hdevalence/tendermint-rs.git", branch = "abci-domain-types" }
pin-project = "1"
futures = "0.3"

[build-dependencies]
vergen = "5"


