[package]
name = "penumbra"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2018"
description = "The node software for the Penumbra Zone"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-proto = { path = "../proto" }
# Penumbra dependencies
decaf377 = { git = "https://github.com/penumbra-zone/decaf377" }
tower-abci = { git = "https://github.com/penumbra-zone/tower-abci/" }
tendermint-proto = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "abci-domain-types" }
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "abci-domain-types" }
# External dependencies
bytes = "1"
tokio = { version = "1", features = ["full"]}
tower = { version = "0.4", features = ["full"]}
tracing = "0.1"
structopt = "0.3"
tracing-subscriber = "0.2"
pin-project = "1"
futures = "0.3"
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
anyhow = "1"
hex = "0.4"

[build-dependencies]
vergen = "5"


