[package]
name = "penumbrad"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2018"
description = "The node software for the Penumbra Zone"
repository = "https://github.com/penumbrazone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]



