[package]
name = "penumbra-proof-params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace deps
penumbra-crypto = { path = "../crypto/" }

# Git deps
decaf377 = { git = "https://github.com/penumbra-zone/decaf377", features = ["r1cs"] }

# Crates.io deps
ark-ff = "0.3"
ark-std = "0.3"
ark-serialize = "0.3"
serde = { version = "1", features = ["derive"] }
serde_with = { version = "1.11", features = ["hex"] }
once_cell = "1.8"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand = "0.8"
# only needed because ark-ff doesn't display correctly
num-bigint = "0.4"
tracing = "0.1"
ark-groth16 = "0.3"
ark-snark = "0.3"
ark-r1cs-std = "0.3"
ark-relations = "0.3"
ark-nonnative-field = "0.3"

[dev-dependencies]
penumbra-tct = { path = "../tct/", features = ["r1cs"] }
