[package]
name = "penumbra-proof-params"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace deps
penumbra-crypto = { path = "../crypto/" }

# Git deps
decaf377 = { version = "0.2", features = ["r1cs"] }

# Crates.io deps
ark-ff = {version = "0.3", default-features = false}
ark-std = {version = "0.3", default-features = false}
ark-serialize = "0.3"
serde = { version = "1", features = ["derive"] }
once_cell = "1.8"
rand_core = { version = "0.6.3", features = ["getrandom"] }
rand = "0.8"
# only needed because ark-ff doesn't display correctly
num-bigint = "0.4"
tracing = "0.1"
ark-groth16 = {version = "0.3", default-features = false}
ark-snark = "0.3"
ark-r1cs-std = {version = "0.3", default-features = false}
ark-relations = "0.3"
ark-nonnative-field = "0.3"

[dev-dependencies]
penumbra-tct = { path = "../tct/", features = ["r1cs"] }

[features]
proving-keys = []
fast-proofs = ["ark-ff/parallel", "ark-groth16/parallel", "ark-std/parallel", "ark-r1cs-std/parallel"]
