[package]
name = "penumbra-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
decaf377-fmd = { path = "../decaf377-fmd" }
decaf377-rdsa = { version = "0.5", git = "https://github.com/penumbra-zone/decaf377-rdsa" }
bytes = { version = "1", features = ["serde"] }
prost = "0.11"
tonic = { version = "0.8.1", optional = true }
serde = { version = "1", features = ["derive"] }
hex = "0.4"
anyhow = "1.0"
subtle-encoding = "0.5"
bech32 = "0.8"
penumbra-storage = { path = "../storage", optional = true }
pin-project = "1"
async-trait = "0.1.52"
async-stream = "0.2.0"
tracing = "0.1"
futures = "0.3"
pbjson = "0.5"
pbjson-types = "0.5"

ibc-proto = { version = "0.26", default-features = false, features = ["std"] }
ibc = "0.29"
ics23 = "0.9.0"
tendermint = "0.29.0"

[features]
rpc = ["dep:tonic", "ibc-proto/client"]
