[package]
name = "penumbra-schema"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
prost = "0.11"
bytes = "1"
clap = { version = "4", features = ["derive"] }
penumbra-proto = { path = "../proto" }