[package]
name = "penumbra-stake"
version = "0.1.0"
authors = ["Penumbra Labs <team@penumbra.zone>"]
edition = "2021"
description = "The staking and delegation implementation for Penumbra"
repository = "https://github.com/penumbra-zone/penumbra/"
homepage = "https://penumbra.zone"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Workspace dependencies
penumbra-crypto = { path = "../crypto" }

# Penumbra dependencies
tendermint = { git = "https://github.com/penumbra-zone/tendermint-rs.git", branch = "master" }
# External dependencies
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[build-dependencies]
vergen = "5"
